--- a/src/views/MainPage/index.css
+++ b/src/views/MainPage/index.css
@@ -1,4 +1,4 @@
-body {
+.main-page-bg {
   background: url('../../img/mainpage.jpg') no-repeat center center fixed;
   background-size: cover;
 }
@@ -23,7 +23,7 @@ h1 {
   font-size: 7em;
   text-align: center;
   text-shadow: -3px 0 #01278a, 0 3px #01278a, 3px 0 #01278a, 0 -3px #8ad4fe;
-  color: #cdfafc;
+  color: #fff;
 }
 
 h2 {
@@ -34,7 +34,7 @@ h2 {
   font-size: 2.5em;
   text-align: center;
   text-shadow: 1px 1px 0 #010514;
-  color: #cdfafc;
+  color: #fff;
 }
 
 .button-container {
