Add return button

--- a/src/views/MainPage/index.css
+++ b/src/views/MainPage/index.css
@@ -38,7 +38,7 @@ h2 {
   color: #fff;
 }
 
-.button-container {
+.btn-enter-container {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
