--- a/src/views/ModeSelector/index.css
+++ b/src/views/ModeSelector/index.css
@@ -63,3 +63,10 @@
   margin: 0 auto;
   width: 9em;
 }
+
+.btn-return-container {
+  display: flex;
+  margin: -4em 0 4em 0;
+  width: 100%;
+  justify-content: center;
+}
