--- a/src/components/Button/index.css
+++ b/src/components/Button/index.css
@@ -1,10 +1,11 @@
 .btn {
   display: block;
   background-color: #010514;
-  padding: 0px 10px 5px 15px;
+  padding: 8px 10px 10px 15px;
   cursor: pointer;
   font-family: Nebula-Regular, sans-serif;
   font-size: 3em;
   text-align: center;
+  vertical-align: middle;
   color: #fff;
 }
