--- a/src/views/MainPage/index.css
+++ b/src/views/MainPage/index.css
@@ -53,6 +53,7 @@ h2 {
   min-width: 45px;
   min-height: 45px;
   font-size: 1.5em;
+  white-space: normal;
 }
 
 @media screen and (min-width: 400px) {
