--- a/src/views/ModeSelector/index.css
+++ b/src/views/ModeSelector/index.css
@@ -1,3 +1,8 @@
+/*
+Sizes are set for small devices and then
+increased with media queries for bigger screens
+ */
+
 @font-face {
   font-family: Cairo-Regular;
   src: url(../../fonts/cairo-regular.woff2);
@@ -9,61 +14,73 @@
   background-size: cover;
 }
 
-.row {
+main {
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: center;
   width: 100%;
 }
 
-.column {
+.cards-container {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
-  align-items: center;
-  flex-basis: 100%;
-  flex: 1;
-  height: 100vh;
-  padding: 0 30px 0 30px;
+  flex-wrap: wrap;
+  width: 100%;
+  max-width: 1500px;
 }
 
-.selection-container {
+.card {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  flex-grow: 1;
+  flex-basis: 100%;
+  margin: 0 1em 1em 1em;
   border-radius: 5px;
-  height: 65vh;
-  padding: 2em 3em 2em 3em;
+  width: 100%;
+  min-width: 200px;
+  max-width: 1000px;
+  min-height: 250px;
+  padding: 1em;
   background-color: rgba(198, 245, 253, 0.3);
   text-align: center;
 }
 
-.selection-container-text {
+.card-text-container {
   display: flex;
   flex-direction: row;
+  margin: 0 0 1.5em 0;
   height: 80%;
 }
 
-.selection-container-btn {
+.card-btn-container {
   display: flex;
   flex-direction: row;
   align-items: flex-end;
   height: 20%;
-  margin: 0 0 1em 0;
+  margin: 0 0 0.5em 0;
 }
 
-.text {
-  font-size: 2.5em;
+.card-text {
+  font-size: 1.1em;
   font-family: cairo-regular, sans-serif;
   text-align: center;
   color: #fff;
 }
 
-.btn-mode-selector {
+.card-btn {
   opacity: 0.8;
   width: 9em;
   margin: 0 auto;
   background-color: #030f39;
+  font-size: 1em;
+}
+
+.btn-back-container {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  margin: 1em 0 1em 0;
 }
 
 .btn-back {
@@ -74,16 +91,69 @@
   font-size: 1.5em;
 }
 
-.btn-back-container {
-  display: flex;
-  justify-content: center;
-  width: 100%;
-  margin: -4em 0 4em 0;
+@media screen and (min-width: 300px) {
+  .card-text {
+    font-size: 1.35em;
+  }
+}
+
+@media screen and (min-width: 400px) {
+  .card-text {
+    font-size: 1.5em;
+  }
+
+  .card-btn {
+    font-size: 1.5em;
+  }
+
+  .btn-back {
+    font-size: 2em;
+  }
 }
 
 @media screen and (min-width: 600px) {
+  .card-text {
+    font-size: 2em;
+  }
+
   .btn-back {
     border-width: 5px;
     font-size: 3em;
+  }
+
+  .card-btn {
+    font-size: 2em;
+  }
+}
+
+@media screen and (min-width: 800px) {
+  .card {
+    flex-basis: 30%;
+  }
+
+  .text {
+    font-size: 2.25em;
+  }
+
+  .card-btn {
+    font-size: 2.5em;
+  }
+
+  .btn-back {
+    font-size: 3em;
+  }
+}
+
+@media screen and (min-width: 1000px) {
+  .card-container {
+    min-height: 450px;
+  }
+
+  .card-text {
+    font-size: 2.75em;
+  }
+
+  .card-btn {
+    font-size: 2.75em;
   }
 }
