--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+:root {
+  --btn-color-forth: #010514;
+  --btn-color-back: #a6bcd3;
+  --text: #fff;
+}
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -6,5 +12,6 @@
 }
 
 body {
-  padding: 20px 0;
+  padding: 30px 15px;
+  color: var(--text);
 }
