Back to top component changes
- move hooks inside component folder
- remove  back to top from mode selector
- styling as prop

--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,21 @@ body {
   padding: 30px 15px;
   color: var(--text);
 }
+
+.back-to-top {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  z-index: 1;
+  right: 20px;
+  bottom: 20px;
+  border-width: 2px;
+  width: 45px;
+  height: 45px;
+  background-color: var(--btn-color-back);
+  cursor: pointer;
+  font-size: 2.5em;
+  font-family: Nebula-Regular, sans-serif;
+  color: var(--text);
+}
