--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 :root {
   --btn-color-forth: #010514;
   --btn-color-back: #a6bcd3;
-  --text: #fff;
+  --white: #fff;
 }
 
 * {
@@ -16,11 +16,26 @@ body {
   justify-content: center;
   align-items: center;
   padding: 30px 15px;
-  color: var(--text);
+  color: var(--white);
 }
 
 .App {
   height: 90vh;
+}
+
+@font-face {
+  font-family: Nebula-Regular;
+  src: url(./fonts/nebula-regular.woff2);
+}
+
+@font-face {
+  font-family: Nebula-Hollow;
+  src: url(./fonts/nebula-hollow.woff2);
+}
+
+@font-face {
+  font-family: Cairo-Regular;
+  src: url(./fonts/cairo-regular.woff2);
 }
 
 .back-to-top {
@@ -38,5 +53,5 @@ body {
   cursor: pointer;
   font-size: 2.5em;
   font-family: Nebula-Regular, sans-serif;
-  color: var(--text);
+  color: var(--white);
 }
