--- a/src/components/CategorySelector/index.css
+++ b/src/components/CategorySelector/index.css
@@ -1,4 +1,46 @@
-.category-select {
+.category-selector-form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  width: 60vw;
   min-width: 200px;
-  color: #000;
+  max-width: 1000px;
+  min-height: 200px;
+  padding: 2em;
+  border-radius: 5px;
+  background-color: rgba(198, 245, 253, 0.7);
+}
+
+.suggestions-amount {
+  display: flex;
+  flex: 40%;
+  width: 100px;
+  max-width: 100px;
+  height: 45px;
+  padding: 0 0 0 10px;
+  border: 1px solid #cccccc;
+  border-radius: 5px;
+  color: #3a3346;
+}
+
+/* Hard "outline" with box-shadow: */
+.suggestions-amount:focus {
+  box-shadow: 0 0 0 2px #0086ff;
+}
+
+/*
+Hidding button from input type number
+ */
+
+/* Chrome, Safari, Edge, Opera */
+input[type='number']::-webkit-outer-spin-button,
+input[type='number']::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type='number'] {
+  -moz-appearance: textfield;
 }
