--- a/src/components/CategorySelector/index.css
+++ b/src/components/CategorySelector/index.css
@@ -1,26 +1,31 @@
+/*
+Sizes are optimized for small devices and then
+increased with media queries for bigger screens
+ */
+
 .category-selector-form {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  width: 60vw;
-  min-width: 200px;
-  max-width: 1000px;
-  min-height: 200px;
-  padding: 2em;
+  flex-direction: column;
+  width: 95%;
+  min-width: 180px;
+  max-width: 899px;
+  min-height: 150px;
+  padding: 2em 0.5em;
   border-radius: 5px;
   background-color: rgba(198, 245, 253, 0.7);
 }
 
 .suggestions-amount {
   display: flex;
-  flex: 40%;
-  width: 100px;
-  max-width: 100px;
+  width: 75px;
   height: 45px;
   padding: 0 0 0 10px;
   border: 1px solid #cccccc;
   border-radius: 5px;
+  margin: 1em 0;
   color: #3a3346;
 }
 
@@ -43,4 +48,30 @@ input[type='number']::-webkit-inner-spin-button {
 /* Firefox */
 input[type='number'] {
   -moz-appearance: textfield;
+}
+
+.btn-form-submit {
+  width: 110px;
+  height: 45px;
+  font-size: 1.1em;
+}
+
+@media screen and (min-width: 400px) {
+  .category-selector-form {
+    padding: 2em;
+  }
+}
+
+@media screen and (min-width: 750px) {
+  .category-selector-form {
+    flex-direction: row;
+  }
+
+  .suggestions-amount {
+    margin: 0 1em;
+  }
+
+  .btn-form-submit {
+    width: 130px;
+  }
 }
