--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 :root {
   --btn-color-forth: #010514;
-  --btn-color-back: #a6bcd3;
+  --btn-color-back: #8b9db0;
   --white: #fff;
 }
 
@@ -25,27 +25,55 @@ body {
 
 @font-face {
   font-family: Nebula-Regular;
-  src: url(./fonts/nebula-regular.woff2);
+  src: url(./assets/fonts/nebula-regular.woff2);
 }
 
 @font-face {
   font-family: Nebula-Hollow;
-  src: url(./fonts/nebula-hollow.woff2);
+  src: url(./assets/fonts/nebula-hollow.woff2);
 }
 
 @font-face {
   font-family: Cairo-Regular;
-  src: url(./fonts/cairo-regular.woff2);
+  src: url(./assets/fonts/cairo-regular.woff2);
+}
+
+h1 {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 100%;
+  max-width: 1300px;
+  margin: 0 0 0.15em 0;
+  font-size: 2.25em;
+  font-family: Nebula-Regular, sans-serif;
+  text-align: center;
+  text-shadow: -3px 0 #01278a, 0 3px #01278a, 3px 0 #01278a, 0 -3px #8ad4fe;
+}
+
+h2 {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 100%;
+  max-width: 1100px;
+  margin: 0 0 1em 0;
+  font-size: 1.3em;
+  font-family: Nebula-Hollow, sans-serif;
+  text-align: center;
+  text-shadow: 1px 1px 0 #010514;
+}
+
+h3 {
+  width: 100%;
+  margin: 0 auto;
+  font-family: Nebula-Regular;
+  font-size: 1.5em;
+  text-align: center;
 }
 
 .btn-forth {
-  width: 9em;
-  border-width: 3px;
-  min-height: 45px;
-  max-height: 2em;
-  margin: 0 auto;
   background-color: var(--btn-color-forth);
-  font-size: 1em;
 }
 
 .btn-back {
@@ -71,4 +99,66 @@ body {
   font-size: 2.5em;
   font-family: Nebula-Regular, sans-serif;
   color: var(--white);
+}
+
+@media screen and (min-width: 300px) {
+  h1 {
+    font-size: 3em;
+  }
+
+  h2 {
+    font-size: 1.5em;
+  }
+
+  h3 {
+    font-size: 2em;
+  }
+}
+
+@media screen and (min-width: 400px) {
+  h1 {
+    font-size: 4em;
+  }
+
+  h2 {
+    font-size: 1.25em;
+  }
+}
+
+@media screen and (min-width: 600px) {
+  h1 {
+    font-size: 5em;
+  }
+
+  h2 {
+    font-size: 3em;
+  }
+
+  h3 {
+    font-size: 3em;
+  }
+}
+
+@media screen and (min-width: 800px) {
+  h1 {
+    font-size: 7em;
+  }
+
+  h2 {
+    font-size: 2.75em;
+  }
+
+  h3 {
+    font-size: 3.5em;
+  }
+}
+
+@media screen and (min-width: 1000px) {
+  h1 {
+    font-size: 7.75em;
+  }
+
+  h2 {
+    font-size: 3.25em;
+  }
 }
