--- a/src/views/Generator/index.css
+++ b/src/views/Generator/index.css
@@ -1,33 +1,15 @@
-/*
-Sizes are set for small devices and then
-increased with media queries for bigger screens
- */
-
 .bg-generator {
-  background: url('../../img/generator.jpg') no-repeat center center fixed;
+  background: url('../../assets/img/generator.jpg') no-repeat center center
+    fixed;
   background-size: cover;
 }
 
 .generator-container {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
-  padding: 2em;
+  align-items: flex-start;
+  padding: 1em 0;
   width: 100%;
   height: 100%;
-}
-
-@media screen and (min-width: 300px) {
-}
-
-@media screen and (min-width: 400px) {
-}
-
-@media screen and (min-width: 600px) {
-}
-
-@media screen and (min-width: 800px) {
-}
-
-@media screen and (min-width: 1000px) {
 }
