--- a/src/views/MainPage/index.css
+++ b/src/views/MainPage/index.css
@@ -1,10 +1,10 @@
 /*
-Sizes are set for small devices and then
+Sizes are optimized for small devices and then
 increased with media queries for bigger screens
  */
 
 .bg-main-page {
-  background: url('../../img/mainpage.jpg') no-repeat center center fixed;
+  background: url('../../assets/img/mainpage.jpg') no-repeat center center fixed;
   background-size: cover;
 }
 
@@ -12,35 +12,10 @@ increased with media queries for bigger screens
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   padding: 2em;
   width: 100%;
   height: 100%;
-}
-
-h1 {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  width: 100%;
-  max-width: 1300px;
-  margin: 0 0 0.15em 0;
-  font-size: 2.25em;
-  font-family: Nebula-Regular, sans-serif;
-  text-align: center;
-  text-shadow: -3px 0 #01278a, 0 3px #01278a, 3px 0 #01278a, 0 -3px #8ad4fe;
-}
-
-h2 {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  width: 100%;
-  max-width: 1200px;
-  margin: 0 0 1em 0;
-  font-size: 1.3em;
-  font-family: Nebula-Hollow, sans-serif;
-  text-align: center;
-  text-shadow: 1px 1px 0 #010514;
 }
 
 .btn-enter-container {
@@ -53,47 +28,22 @@ h2 {
   border-width: 3px;
   min-width: 130px;
   min-height: 45px;
-  background-color: var(--btn-color-forth);
   font-size: 1.1em;
 }
 
 @media screen and (min-width: 300px) {
-  h1 {
-    font-size: 3em;
-  }
-
-  h2 {
-    font-size: 1.5em;
-  }
-
   .btn-enter {
     font-size: 1.5em;
   }
 }
 
 @media screen and (min-width: 400px) {
-  h1 {
-    font-size: 4em;
-  }
-
-  h2 {
-    font-size: 1.25em;
-  }
-
   .btn-enter {
     font-size: 2em;
   }
 }
 
 @media screen and (min-width: 600px) {
-  h1 {
-    font-size: 5em;
-  }
-
-  h2 {
-    font-size: 3em;
-  }
-
   .btn-enter {
     border-width: 5px;
     font-size: 2.5em;
@@ -101,25 +51,7 @@ h2 {
 }
 
 @media screen and (min-width: 800px) {
-  h1 {
-    font-size: 7em;
-  }
-
-  h2 {
-    font-size: 2.75em;
-  }
-
   .btn-enter {
     font-size: 3em;
-  }
-}
-
-@media screen and (min-width: 1000px) {
-  h1 {
-    font-size: 7.75em;
-  }
-
-  h2 {
-    font-size: 3.5em;
   }
 }
