--- a/src/views/ModeSelector/index.css
+++ b/src/views/ModeSelector/index.css
@@ -1,11 +1,12 @@
 /*
-Sizes are set for small devices and then
+Sizes are optimized for small devices and then
 increased with media queries for bigger screens
  */
 
 .bg-mode-selector {
   height: 100vh;
-  background: url('../../img/modeselector.jpg') no-repeat center center fixed;
+  background: url('../../assets/img/modeselector.jpg') no-repeat center center
+    fixed;
   background-size: cover;
 }
 
@@ -59,6 +60,15 @@ increased with media queries for bigger screens
   align-items: flex-end;
   height: 20%;
   margin: 0 0 0.5em 0;
+}
+
+.card-btn {
+  width: 9em;
+  min-height: 45px;
+  max-height: 2em;
+  border-width: 3px;
+  margin: 0 auto;
+  font-size: 1em;
 }
 
 .card-text {
