--- a/src/components/CategorySelector/index.css
+++ b/src/components/CategorySelector/index.css
@@ -4,17 +4,17 @@ increased with media queries for bigger screens
  */
 
 .category-selector-form {
-  display: flex;
-  justify-content: center;
+  display: grid;
+  justify-items: center;
   align-items: center;
-  flex-wrap: wrap;
-  flex-direction: column;
+  grid-template-columns: 1fr;
   width: 95%;
   min-width: 180px;
   max-width: 899px;
-  min-height: 150px;
+  min-height: 220px;
   padding: 2em 0.5em;
   border-radius: 5px;
+  margin: 0 0 2em 0;
   background-color: rgba(198, 245, 253, 0.7);
 }
 
@@ -27,6 +27,13 @@ increased with media queries for bigger screens
   border-radius: 5px;
   margin: 1em 0;
   color: #3a3346;
+}
+
+.btn-form-submit {
+  display: flex;
+  width: 110px;
+  height: 45px;
+  font-size: 1.1em;
 }
 
 /* Hard "outline" with box-shadow: */
@@ -50,21 +57,12 @@ input[type='number'] {
   -moz-appearance: textfield;
 }
 
-.btn-form-submit {
-  width: 110px;
-  height: 45px;
-  font-size: 1.1em;
-}
-
-@media screen and (min-width: 400px) {
+@media screen and (min-width: 600px) {
   .category-selector-form {
-    padding: 2em;
-  }
-}
-
-@media screen and (min-width: 750px) {
-  .category-selector-form {
+    display: flex;
     flex-direction: row;
+    justify-content: center;
+    padding: 2em;
   }
 
   .suggestions-amount {
