--- a/src/views/Generator/index.css
+++ b/src/views/Generator/index.css
@@ -6,10 +6,9 @@
 
 .generator-container {
   display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: flex-start;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
   padding: 1em 0;
   width: 100%;
-  height: 100%;
 }
