--- a/src/views/MainPage/index.css
+++ b/src/views/MainPage/index.css
@@ -16,6 +16,7 @@ increased with media queries for bigger screens
   padding: 2em;
   width: 100%;
   height: 100%;
+  min-height: 80vh;
 }
 
 .btn-enter-container {
