--- a/src/components/SuggestionPicture/index.css
+++ b/src/components/SuggestionPicture/index.css
@@ -2,8 +2,19 @@
   display: block;
   filter: contrast(0.6);
   min-width: 150px;
-  max-width: 90%;
-  min-height: 200px;
-  max-height: 500px;
+  max-width: 100%;
+  height: auto;
   margin: 1em 1em;
+}
+
+@media screen and (min-width: 600px) {
+  .suggestion-img {
+    max-width: 40%;
+  }
+}
+
+@media screen and (min-width: 900px) {
+  .suggestion-img {
+    max-width: 32%;
+  }
 }
