--- a/src/components/SuggestionTextList/index.css
+++ b/src/components/SuggestionTextList/index.css
@@ -1,5 +1,6 @@
-.suggestion-pictures-container {
+.suggestion-texts-container {
   display: flex;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
@@ -8,6 +9,17 @@
   min-width: 180px;
   max-width: 1300px;
   border-radius: 5px;
+  margin: 1em 0 0 0;
   padding: 1em 1em;
   background-color: rgba(198, 245, 253, 0.7);
+}
+
+.suggestion-text {
+  display: block;
+  width: 100%;
+  padding: 0.5em;
+  margin: 0 0 0.5em 0;
+  background-color: #9fd1f5;
+  color: #012166;
+  text-align: center;
 }
