Add picture description

--- a/src/components/SuggestionPicture/index.css
+++ b/src/components/SuggestionPicture/index.css
@@ -1,5 +1,6 @@
 .suggestion-img-container {
   display: flex;
+  flex-direction: column;
   min-width: 125px;
   max-width: 100%;
   height: auto;
@@ -10,6 +11,12 @@
 .suggestion-img {
   display: inline-block;
   max-width: 100%;
+  margin: 0 0 1em 0;
+}
+
+.suggestion-img-desc {
+  color: #012166;
+  text-align: center;
 }
 
 @media screen and (min-width: 600px) {
