--- a/src/components/SuggestionTextList/index.css
+++ b/src/components/SuggestionTextList/index.css
@@ -4,10 +4,8 @@
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  width: 90%;
   height: auto;
   min-width: 180px;
-  max-width: 900px;
   border-radius: 5px;
   margin: 1em 0 0 0;
   padding: 1em 1em;
@@ -19,7 +17,8 @@
   width: 100%;
   padding: 0.5em;
   margin: 0 0 0.5em 0;
-  background-color: #9fd1f5;
-  color: #012166;
+  background-color: #d7f2f5;
+  border-radius: 5px;
+  color: var(--dark-blue);
   text-align: center;
 }
