--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
   --btn-color-forth: #010514;
   --btn-color-back: #8b9db0;
   --white: #fff;
+  --dark-blue: #001234;
 }
 
 * {
@@ -11,15 +12,21 @@
   scroll-behavior: smooth;
 }
 
+*:focus {
+  outline: none;
+}
+
 #root {
   width: 100%;
 }
 
-body {
+.App {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
+  height: 100vh;
   padding: 30px 15px;
+  font-family: cairo-regular, sans-serif;
   color: var(--white);
 }
 
@@ -42,7 +49,7 @@ h1 {
   width: 100%;
   max-width: 1300px;
   margin: 0 0 0.15em 0;
-  font-size: 2.25em;
+  font-size: 2em;
   font-family: Nebula-Regular, sans-serif;
   text-align: center;
   text-shadow: -3px 0 #01278a, 0 3px #01278a, 3px 0 #01278a, 0 -3px #8ad4fe;
@@ -53,9 +60,11 @@ h2 {
   max-width: 1100px;
   margin: 0 0 1em 0;
   font-size: 1.3em;
-  font-family: Nebula-Hollow, sans-serif;
+  font-family: Nebula-Regular, sans-serif;
   text-align: center;
-  text-shadow: 1px 1px 0 #010514;
+  text-shadow: -1px -1px 0 var(--white), 1px -1px 0 var(--white),
+    -1px 1px 0 var(--white), 1px 1px 0 var(--white);
+  color: var(--dark-blue);
 }
 
 h3 {
@@ -99,7 +108,7 @@ h3 {
 
 @media screen and (min-width: 300px) {
   h1 {
-    font-size: 3em;
+    font-size: 2.75em;
   }
 
   h2 {
@@ -113,11 +122,14 @@ h3 {
 
 @media screen and (min-width: 400px) {
   h1 {
-    font-size: 4em;
+    font-size: 3.5em;
   }
 
   h2 {
-    font-size: 1.25em;
+    font-size: 2.25em;
+    text-shadow: -2px -2px 0 var(--white), 2px -2px 0 var(--white),
+      -2px 2px 0 var(--white), 2px 2px 0 var(--white);
+    color: var(--dark-blue);
   }
 }
 
@@ -127,7 +139,7 @@ h3 {
   }
 
   h2 {
-    font-size: 3em;
+    font-size: 2.75em;
   }
 
   h3 {
@@ -141,7 +153,7 @@ h3 {
   }
 
   h2 {
-    font-size: 2.75em;
+    font-size: 3em;
   }
 
   h3 {
