--- a/src/views/Generator/index.css
+++ b/src/views/Generator/index.css
@@ -6,11 +6,13 @@
 
 .generator-container {
   display: flex;
+  justify-self: flex-start;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
   padding: 1em 0;
-  width: 100%;
+  width: 90%;
+  max-width: 1300px;
 }
 
 @media screen and ((min-width: 450px) or (min-height: 300px)) {
