--- a/src/components/CategorySelector/index.css
+++ b/src/components/CategorySelector/index.css
@@ -24,13 +24,21 @@ increased with media queries for bigger screens
   padding: 0 0 0 10px;
   border: 1px solid #cccccc;
   border-radius: 5px;
-  margin: 1em 0;
+  margin: 1em 0 2em 0;
   color: #3a3346;
 }
 
 .btn-form-submit {
   display: flex;
-  width: 110px;
+  min-width: 110px;
+  height: 45px;
+  font-size: 1.1em;
+  margin: 0 0 0.5em 0;
+}
+
+.btn-reset {
+  display: flex;
+  min-width: 110px;
   height: 45px;
   font-size: 1.1em;
 }
@@ -62,14 +70,15 @@ input[type='number'] {
     flex-direction: row;
     justify-content: center;
     min-height: 150px;
-    padding: 2em;
+    padding: 2em 1em;
   }
 
   .suggestions-amount {
-    margin: 0 1em;
+    margin: 0 2em 0 0.5em;
   }
 
   .btn-form-submit {
     width: 130px;
+    margin: 0 0.5em 0 0;
   }
 }
