--- a/src/components/Button/index.css
+++ b/src/components/Button/index.css
@@ -5,5 +5,5 @@
   padding: 8px 10px 10px 15px;
   cursor: pointer;
   font-family: Nebula-Regular, sans-serif;
-  color: #fff;
+  color: var(--white);
 }
