--- a/src/components/SuggestionTextList/index.css
+++ b/src/components/SuggestionTextList/index.css
@@ -10,7 +10,7 @@
   border-radius: 5px;
   margin: 1em 0 0 0;
   padding: 1em 1em;
-  background-color: rgba(198, 245, 253, 0.7);
+  background-color: var(--light-blue-transparent);
 }
 
 .suggestion-text {
