--- a/src/components/CategorySelector/index.css
+++ b/src/components/CategorySelector/index.css
@@ -12,51 +12,36 @@
   background-color: var(--light-blue-transparent);
 }
 
-.suggestions-amount {
-  display: flex;
-  width: 75px;
-  height: 45px;
-  padding: 0 0 0 10px;
-  border: 1px solid var(--light-grey);
-  border-radius: 5px;
-  margin: 1em 0 2em 0;
+.select-category {
+  flex: 40%;
+  width: 100%;
+  min-width: 155px;
+  max-width: 250px;
+  color: var(--dark-grey);
+}
+
+.select-amount {
+  flex: 15%;
+  width: 100%;
+  min-width: 115px;
+  max-width: 250px;
+  margin: 0.5em 0 1em 0;
   color: var(--dark-grey);
 }
 
 .btn-form-submit {
   display: flex;
-  min-width: 110px;
+  min-width: 150px;
   height: 45px;
-  font-size: 1.1em;
   margin: 0 0 0.5em 0;
+  font-size: 1.1em;
 }
 
 .btn-reset {
   display: flex;
-  min-width: 110px;
+  min-width: 150px;
   height: 45px;
   font-size: 1.1em;
-}
-
-/* Hard "outline" with box-shadow: */
-.suggestions-amount:focus {
-  box-shadow: 0 0 0 2px var(--blue-outline);
-}
-
-/*
-Hidding button from input type number
- */
-
-/* Chrome, Safari, Edge, Opera */
-input[type='number']::-webkit-outer-spin-button,
-input[type='number']::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
-}
-
-/* Firefox */
-input[type='number'] {
-  -moz-appearance: textfield;
 }
 
 @media screen and (min-width: 600px) {
@@ -68,12 +53,16 @@ input[type='number'] {
     padding: 2em 1em;
   }
 
-  .suggestions-amount {
-    margin: 0 2em 0 0.5em;
+  .select-amount {
+    margin: 0 1em 0 0.5em;
   }
 
   .btn-form-submit {
-    width: 130px;
-    margin: 0 0.5em 0 0;
+    min-width: 110px;
+    margin: 0 0.25em 0 0;
+  }
+
+  .btn-reset {
+    min-width: 80px;
   }
 }
