--- a/src/components/CategorySelector/index.css
+++ b/src/components/CategorySelector/index.css
@@ -44,7 +44,7 @@
   font-size: 1.1em;
 }
 
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 700px) {
   .category-selector-form {
     display: flex;
     flex-direction: row;
@@ -54,7 +54,8 @@
   }
 
   .select-amount {
-    margin: 0 1em 0 0.5em;
+    margin: 0 3em 0 0.5em;
+    max-width: 110px;
   }
 
   .btn-form-submit {
