--- a/src/views/Generator/index.css
+++ b/src/views/Generator/index.css
@@ -23,7 +23,7 @@
   width: 100%;
   min-width: 180px;
   height: auto;
-  border-radius: 5px;
+  border-radius: var(--border-radius);
   margin: 1em 0 0 0;
   padding: 1em 1em;
   background-color: var(--light-blue-transparent);
