--- a/src/components/CategorySelector/index.css
+++ b/src/components/CategorySelector/index.css
@@ -7,7 +7,7 @@
   min-width: 180px;
   min-height: 220px;
   padding: 2em 0.5em;
-  border-radius: 5px;
+  border-radius: var(--border-radius);
   margin: 0 0 2em 0;
   background-color: var(--light-blue-transparent);
 }
