--- a/src/components/SuggestionTextList/index.css
+++ b/src/components/SuggestionTextList/index.css
@@ -4,7 +4,7 @@
   padding: 0.5em;
   margin: 0 0 0.5em 0;
   background-color: #d7f2f5;
-  border-radius: 5px;
+  border-radius: var(--border-radius);
   color: var(--dark-blue);
   text-align: center;
 }
