--- a/src/views/Generator/index.css
+++ b/src/views/Generator/index.css
@@ -4,6 +4,52 @@
   background-size: cover;
 }
 
+.category-selector-form {
+  display: grid;
+  justify-items: center;
+  align-items: center;
+  grid-template-columns: 1fr;
+  width: 100%;
+  min-width: 180px;
+  min-height: 220px;
+  padding: 2em 0.5em;
+  border-radius: var(--border-radius);
+  margin: 0 0 2em 0;
+  background-color: var(--light-blue-transparent);
+}
+
+.select-category {
+  flex: 40%;
+  width: 100%;
+  min-width: 155px;
+  max-width: 250px;
+  color: var(--dark-grey);
+}
+
+.select-amount {
+  flex: 15%;
+  width: 100%;
+  min-width: 115px;
+  max-width: 250px;
+  margin: 0.5em 0 1em 0;
+  color: var(--dark-grey);
+}
+
+.btn-form-submit {
+  display: flex;
+  min-width: 150px;
+  height: 45px;
+  margin: 0 0 0.5em 0;
+  font-size: 1.1em;
+}
+
+.btn-reset {
+  display: flex;
+  min-width: 150px;
+  height: 45px;
+  font-size: 1.1em;
+}
+
 .generator-container {
   display: flex;
   justify-self: flex-start;
@@ -38,6 +84,68 @@
   text-transform: uppercase;
   font-size: 1.5em;
   color: var(--darkest-blue);
+}
+
+.suggestion-img-container {
+  display: flex;
+  flex-direction: column;
+  min-width: 125px;
+  max-width: 100%;
+  height: auto;
+  margin: 1em 1em;
+}
+
+.suggestion-img {
+  display: inline-block;
+  max-width: 100%;
+  margin: 0 0 1em 0;
+}
+
+.suggestion-text {
+  display: block;
+  width: 100%;
+  padding: 0.5em;
+  margin: 0 0 0.5em 0;
+  background-color: #d7f2f5;
+  border-radius: var(--border-radius);
+  color: var(--dark-blue);
+  text-align: center;
+}
+
+@media screen and (min-width: 600px) {
+  .suggestion-img-container {
+    max-width: 40%;
+  }
+}
+
+@media screen and (min-width: 700px) {
+  .category-selector-form {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    min-height: 150px;
+    padding: 2em 1em;
+  }
+
+  .select-amount {
+    margin: 0 3em 0 0.5em;
+    max-width: 110px;
+  }
+
+  .btn-form-submit {
+    min-width: 110px;
+    margin: 0 0.25em 0 0;
+  }
+
+  .btn-reset {
+    min-width: 80px;
+  }
+}
+
+@media screen and (min-width: 900px) {
+  .suggestion-img-container {
+    max-width: 32%;
+  }
 }
 
 @media screen and ((min-width: 450px) or (min-height: 300px)) {
