--- a/src/index.css
+++ b/src/index.css
@@ -130,6 +130,10 @@ h3 {
   color: var(--white);
 }
 
+.hidden {
+  display: none;
+}
+
 @media screen and (min-width: 300px) {
   h1 {
     font-size: 2.75em;
