--- a/src/components/Spinner/index.css
+++ b/src/components/Spinner/index.css
@@ -6,7 +6,7 @@
   width: 100%;
   min-width: 180px;
   height: 100%;
-  border-radius: var(--border-radius);
+  border-radius: var(--border-radius-light);
   margin: 1em 0 0 0;
   padding: 1em 1em;
   background-color: var(--light-blue-transparent);
