--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,8 @@ increased with media queries for bigger screens
   --critical-error: #e50000;
   --notice-error: #2aab24;
 
-  --border-radius: 5px;
+  --border-radius-light: 5px;
+  --border-radius-strong: 10px;
 }
 
 * {
@@ -103,7 +104,7 @@ h3 {
 
 h4 {
   width: 100%;
-  border-radius: var(--border-radius);
+  border-radius: var(--border-radius-light);
   margin: 0 0 1em 0;
   border: 1px solid var(--darkest-blue);
   background-color: var(--lightest-blue);
