--- a/src/index.css
+++ b/src/index.css
@@ -127,17 +127,19 @@ h4 {
 }
 
 .back-to-top {
-  display: flex;
-  align-items: center;
-  justify-content: center;
   position: fixed;
   z-index: 1;
   right: 20px;
   bottom: 20px;
-  border-width: 2px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 45px;
   height: 45px;
-  background-color: var(--btn-color-back);
+  border: 2px solid var(--white);
+  border-radius: var(--border-radius-light);
+  box-shadow: 0px 0px 36px 3px rgba(255, 255, 255, 1);
+  background-color: #2b4bcf;
   cursor: pointer;
   font-size: 2.5em;
   font-family: Nebula-Regular, sans-serif;
