--- a/src/index.css
+++ b/src/index.css
@@ -143,7 +143,7 @@ h4 {
   border: 2px solid var(--white);
   border-radius: var(--border-radius-light);
   box-shadow: 0px 0px 36px 3px rgba(255, 255, 255, 1);
-  background-color: #2b4bcf;
+  background-color: #01227a;
   cursor: pointer;
   font-size: 2.5em;
   font-family: Nebula-Regular, sans-serif;
