--- a/src/index.css
+++ b/src/index.css
@@ -46,13 +46,13 @@ body {
 }
 
 .App {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  display: block;
+  margin: auto;
   height: 100vh;
   padding: 30px 15px;
   font-family: cairo-regular, sans-serif;
   color: var(--white);
+  text-align: center;
 }
 
 @font-face {
