--- a/src/views/Generator/index.css
+++ b/src/views/Generator/index.css
@@ -52,11 +52,7 @@
 }
 
 .generator-container {
-  display: flex;
-  justify-self: flex-start;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  display: inline-block;
   padding: 1em 0;
   width: 90%;
   max-width: 1300px;
