--- a/src/components/Error/styles.css
+++ b/src/components/Error/styles.css
@@ -3,6 +3,7 @@
   display: flex;
   animation: 1s ease-out 0s 1 slideInFromTop;
   top: 0;
+  left: 0;
   align-items: center;
   justify-content: center;
   width: 100%;
