--- a/src/components/PageNotFound/index.css
+++ b/src/components/PageNotFound/index.css
@@ -1,7 +1,6 @@
-.bg-pagenotfound {
+.bg-page-not-found {
   height: 100vh;
-  background: url('../../assets/img/pagenotfound/500w.jpg') no-repeat center
-    center fixed;
+  background: no-repeat center center fixed;
   background-size: cover;
 }
 
@@ -22,34 +21,6 @@
 .btn-pagenotfound {
   margin: 0.25em 0 0 0;
   font-size: 0.8em;
-}
-
-@media screen and ((min-width: 450px) or (min-height: 270px)) {
-  .bg-pagenotfound {
-    background: url('../../assets/img/pagenotfound/1000w.jpg') no-repeat center
-      center fixed;
-  }
-}
-
-@media screen and ((min-width: 950px) or (min-height: 500px)) {
-  .bg-pagenotfound {
-    background: url('../../assets/img/pagenotfound/2000w.jpg') no-repeat center
-      center fixed;
-  }
-}
-
-@media screen and ((min-width: 1950px) or (min-height: 1100px)) {
-  .bg-pagenotfound {
-    background: url('../../assets/img/pagenotfound/3000w.jpg') no-repeat center
-      center fixed;
-  }
-}
-
-@media screen and ((min-width: 2950px) or (min-height: 1600px)) {
-  .bg-pagenotfound {
-    background: url('../../assets/img/pagenotfound/3840w.jpg') no-repeat center
-      center fixed;
-  }
 }
 
 @media screen and (min-width: 300px) {
@@ -73,5 +44,45 @@
 @media screen and (min-width: 1000px) {
   .page-not-found-text {
     font-size: 3.5em;
+  }
+}
+
+@media screen and (max-width: 449px), screen and (max-height: 299px) {
+  .bg-page-not-found {
+    background-image: url('../../assets/img/pagenotfound/500w.jpg');
+  }
+}
+
+@media screen and (min-width: 450px) and (max-width: 949px),
+  screen and (min-height: 300px) and (max-height: 499px) {
+  .bg-page-not-found {
+    background-image: url('../../assets/img/pagenotfound/1000w.jpg');
+  }
+}
+
+@media screen and (min-width: 950px) and (max-width: 1449px),
+  screen and (min-height: 500px) and (max-height: 999px) {
+  .bg-page-not-found {
+    background-image: url('../../assets/img/pagenotfound/1500w.jpg');
+  }
+}
+
+@media screen and (min-width: 1450px) and (max-width: 1949px),
+  screen and (min-height: 1000px) and (max-height: 1349px) {
+  .bg-page-not-found {
+    background-image: url('../../assets/img/pagenotfound/2000w.jpg');
+  }
+}
+
+@media screen and (min-width: 1950px) and (max-width: 2449px),
+  screen and (min-height: 1350px) and (max-height: 1699px) {
+  .bg-page-not-found {
+    background-image: url('../../assets/img/pagenotfound/2500w.jpg');
+  }
+}
+
+@media screen and (min-width: 2450px), screen and (min-height: 1700px) {
+  .bg-page-not-found {
+    background-image: url('../../assets/img/pagenotfound/3840w.jpg');
   }
 }
