--- a/src/views/MainPage/index.css
+++ b/src/views/MainPage/index.css
@@ -1,6 +1,5 @@
 .bg-main-page {
-  background: url('../../assets/img/mainpage/500w.jpg') no-repeat center center
-    fixed;
+  background: no-repeat center fixed;
   background-size: cover;
 }
 
@@ -53,58 +52,42 @@
   }
 }
 
-@media screen and ((min-width: 450px) or (min-height: 300px)) {
+@media screen and (max-width: 449px), screen and (max-height: 299px) {
   .bg-main-page {
-    background: url('../../assets/img/mainpage/750w.jpg') no-repeat center
-      center fixed;
+    background-image: url('../../assets/img/mainpage/500w.jpg');
   }
 }
 
-@media screen and ((min-width: 700px) or (min-height: 500px)) {
+@media screen and (min-width: 450px) and (max-width: 949px),
+  screen and (min-height: 300px) and (max-height: 499px) {
   .bg-main-page {
-    background: url('../../assets/img/mainpage/1000w.jpg') no-repeat center
-      center fixed;
+    background-image: url('../../assets/img/mainpage/1000w.jpg');
   }
 }
 
-@media screen and ((min-width: 950px) or (min-height: 650px)) {
+@media screen and (min-width: 950px) and (max-width: 1449px),
+  screen and (min-height: 500px) and (max-height: 999px) {
   .bg-main-page {
-    background: url('../../assets/img/mainpage/1250w.jpg') no-repeat center
-      center fixed;
+    background-image: url('../../assets/img/mainpage/1500w.jpg');
   }
 }
 
-@media screen and ((min-width: 1200px) or (min-height: 850px)) {
+@media screen and (min-width: 1450px) and (max-width: 1949px),
+  screen and (min-height: 1000px) and (max-height: 1349px) {
   .bg-main-page {
-    background: url('../../assets/img/mainpage/1500w.jpg') no-repeat center
-      center fixed;
+    background-image: url('../../assets/img/mainpage/2000w.jpg');
   }
 }
 
-@media screen and ((min-width: 1450px) or (min-height: 1000px)) {
+@media screen and (min-width: 1950px) and (max-width: 2449px),
+  screen and (min-height: 1350px) and (max-height: 1699px) {
   .bg-main-page {
-    background: url('../../assets/img/mainpage/2000w.jpg') no-repeat center
-      center fixed;
+    background-image: url('../../assets/img/mainpage/2500w.jpg');
   }
 }
 
-@media screen and ((min-width: 1950px) or (min-height: 1350px)) {
+@media screen and (min-width: 2450px), screen and (min-height: 1700px) {
   .bg-main-page {
-    background: url('../../assets/img/mainpage/2500w.jpg') no-repeat center
-      center fixed;
-  }
-}
-
-@media screen and ((min-width: 2450px) or (min-height: 1700px)) {
-  .bg-main-page {
-    background: url('../../assets/img/mainpage/3000w.jpg') no-repeat center
-      center fixed;
-  }
-}
-
-@media screen and ((min-width: 2950px) or (min-height: 2000px)) {
-  .bg-main-page {
-    background: url('../../assets/img/mainpage/3840w.jpg') no-repeat center
-      center fixed;
+    background-image: url('../../assets/img/mainpage/3840w.jpg');
   }
 }
