--- a/src/views/MainPage/index.css
+++ b/src/views/MainPage/index.css
@@ -1,4 +1,15 @@
 .bg-main-page {
+  position: relative;
+  animation: sharpen 0.5s both;
+}
+
+.bg-main-page::before {
+  content: '';
+  position: absolute;
+  z-index: -1;
+  opacity: 1;
+  width: 100%;
+  height: 100%;
   background: no-repeat center fixed;
   background-size: cover;
 }
@@ -53,41 +64,41 @@
 }
 
 @media screen and (max-width: 449px), screen and (max-height: 299px) {
-  .bg-main-page {
+  .bg-main-page::before {
     background-image: url('../../assets/img/mainpage/500w.jpg');
   }
 }
 
 @media screen and (min-width: 450px) and (max-width: 949px),
   screen and (min-height: 300px) and (max-height: 499px) {
-  .bg-main-page {
+  .bg-main-page::before {
     background-image: url('../../assets/img/mainpage/1000w.jpg');
   }
 }
 
 @media screen and (min-width: 950px) and (max-width: 1449px),
   screen and (min-height: 500px) and (max-height: 999px) {
-  .bg-main-page {
+  .bg-main-page::before {
     background-image: url('../../assets/img/mainpage/1500w.jpg');
   }
 }
 
 @media screen and (min-width: 1450px) and (max-width: 1949px),
   screen and (min-height: 1000px) and (max-height: 1349px) {
-  .bg-main-page {
+  .bg-main-page::before {
     background-image: url('../../assets/img/mainpage/2000w.jpg');
   }
 }
 
 @media screen and (min-width: 1950px) and (max-width: 2449px),
   screen and (min-height: 1350px) and (max-height: 1699px) {
-  .bg-main-page {
+  .bg-main-page::before {
     background-image: url('../../assets/img/mainpage/2500w.jpg');
   }
 }
 
 @media screen and (min-width: 2450px), screen and (min-height: 1700px) {
-  .bg-main-page {
+  .bg-main-page::before {
     background-image: url('../../assets/img/mainpage/3840w.jpg');
   }
 }
