--- a/src/views/ModeSelector/index.css
+++ b/src/views/ModeSelector/index.css
@@ -1,5 +1,15 @@
 .bg-mode-selector {
-  height: 100vh;
+  position: relative;
+  animation: sharpen 0.5s both;
+}
+
+.bg-mode-selector::before {
+  content: '';
+  position: absolute;
+  z-index: -1;
+  opacity: 1;
+  width: 100%;
+  height: 100%;
   background: no-repeat center fixed;
   background-size: cover;
 }
@@ -7,7 +17,7 @@
 .selectors-container {
   display: grid;
   justify-content: center;
-  height: 90vh;
+  min-height: 90vh;
 }
 
 .selector-container {
@@ -39,14 +49,6 @@
   padding: 1em;
   background-color: var(--light-blue-transparent2);
   text-align: center;
-}
-
-.slide-from-left {
-  animation: 1s ease-in-out 0s 1 slideInFromLeft;
-}
-
-.slide-from-right {
-  animation: 1s ease-in-out 0s 1 slideInFromRight;
 }
 
 .card-text-container {
@@ -159,41 +161,41 @@
 }
 
 @media screen and (max-width: 449px), screen and (max-height: 299px) {
-  .bg-mode-selector {
+  .bg-mode-selector::before {
     background-image: url('../../assets/img/modeselector/500w.jpg');
   }
 }
 
 @media screen and (min-width: 450px) and (max-width: 949px),
   screen and (min-height: 300px) and (max-height: 499px) {
-  .bg-mode-selector {
+  .bg-mode-selector::before {
     background-image: url('../../assets/img/modeselector/1000w.jpg');
   }
 }
 
 @media screen and (min-width: 950px) and (max-width: 1449px),
   screen and (min-height: 500px) and (max-height: 999px) {
-  .bg-mode-selector {
+  .bg-mode-selector::before {
     background-image: url('../../assets/img/modeselector/1500w.jpg');
   }
 }
 
 @media screen and (min-width: 1450px) and (max-width: 1949px),
   screen and (min-height: 1000px) and (max-height: 1349px) {
-  .bg-mode-selector {
+  .bg-mode-selector::before {
     background-image: url('../../assets/img/modeselector/2000w.jpg');
   }
 }
 
 @media screen and (min-width: 1950px) and (max-width: 2449px),
   screen and (min-height: 1350px) and (max-height: 1699px) {
-  .bg-mode-selector {
+  .bg-mode-selector::before {
     background-image: url('../../assets/img/modeselector/2500w.jpg');
   }
 }
 
 @media screen and (min-width: 2450px), screen and (min-height: 1700px) {
-  .bg-mode-selector {
+  .bg-mode-selector::before {
     background-image: url('../../assets/img/modeselector/3840w.jpg');
   }
 }
